--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.0.0",
+    "mathjs": "^5.10.3",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
@@ -31,6 +32,7 @@
     ]
   },
   "devDependencies": {
+    "@types/mathjs": "^5.0.1",
     "@types/react": "^16.8.18",
     "@types/react-dom": "^16.8.4",
     "typescript": "^3.4.5"
